Fix btn z-index

--- a/assets/scss/_elements.scss
+++ b/assets/scss/_elements.scss
@@ -17,7 +17,7 @@
 
 	text-decoration: none;
 
-	z-index: 999;
+	z-index: 998;
 
 	transition: all 300ms cubic-bezier(0.3, 0.27, 0.11, 0.97);
 
